Corrigiendo la API en la confirmación de código verificación
